# LibreMaple-Client

./: .clang-format  .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.h  Configuration.new.cpp  Configuration.new.h  Console.h  Constants.h  Error.h  Journey.cpp  Journey.h  README.md  Timer.h  build.bat  clang-format.py  code-guidelines.md  gen_header_filter.py  libremaple.doxygen.in  settings.toml  tidy.sh
Audio/: Audio.cpp  Audio.h
Character/: ActiveBuffs.cpp  ActiveBuffs.h  Buff.cpp  Buff.h  Char.cpp  Char.h  CharEffect.cpp  CharEffect.h  CharStats.cpp  CharStats.h  EquipStat.cpp  EquipStat.h  ExpTable.cpp  ExpTable.h  Job.cpp  Job.h  MapleStat.cpp  MapleStat.h  MonsterBook.cpp  MonsterBook.h  OtherChar.cpp  OtherChar.h  PassiveBuffs.cpp  PassiveBuffs.h  Player.cpp  Player.h  PlayerStates.cpp  PlayerStates.h  QuestLog.cpp  QuestLog.h  SkillBook.cpp  SkillBook.h  SkillId.h  StatCaps.h  TeleRock.cpp  TeleRock.h
Character/Inventory/: Equip.cpp  Equip.h  EquipQuality.cpp  EquipQuality.h  Inventory.cpp  Inventory.h  InventoryType.cpp  InventoryType.h  Item.cpp  Item.h  Pet.cpp  Pet.h  Weapon.cpp  Weapon.h
Character/Look/: Afterimage.cpp  Afterimage.h  Body.cpp  Body.h  BodyDrawInfo.cpp  BodyDrawInfo.h  CharEquips.cpp  CharEquips.h  CharLook.cpp  CharLook.h  Clothing.cpp  Clothing.h  EquipSlot.cpp  EquipSlot.h  Face.cpp  Face.h  Hair.cpp  Hair.h  PetLook.cpp  PetLook.h  Stance.cpp  Stance.h
Data/: BulletData.cpp  BulletData.h  EquipData.cpp  EquipData.h  ItemData.cpp  ItemData.h  JobData.cpp  JobData.h  SkillData.cpp  SkillData.h  WeaponData.cpp  WeaponData.h
Gameplay/: Camera.cpp  Camera.h  Movement.h  Playable.h  Spawn.cpp  Spawn.h  Stage.cpp  Stage.h
Gameplay/Combat/: Attack.h  Bullet.cpp  Bullet.h  Combat.cpp  Combat.h  DamageNumber.cpp  DamageNumber.h  RegularAttack.cpp  RegularAttack.h  Skill.cpp  Skill.h  SkillAction.cpp  SkillAction.h  SkillBullet.cpp  SkillBullet.h  SkillHitEffect.cpp  SkillHitEffect.h  SkillSound.cpp  SkillSound.h  SkillUseEffect.cpp  SkillUseEffect.h  SpecialMove.h
Gameplay/MapleMap/: Drop.cpp  Drop.h  ItemDrop.cpp  ItemDrop.h  Layer.h  MapBackgrounds.cpp  MapBackgrounds.h  MapChars.cpp  MapChars.h  MapDrops.cpp  MapDrops.h  MapInfo.cpp  MapInfo.h  MapMobs.cpp  MapMobs.h  MapNpcs.cpp  MapNpcs.h  MapObject.cpp  MapObject.h  MapObjects.cpp  MapObjects.h  MapPortals.cpp  MapPortals.h  MapReactors.cpp  MapReactors.h  MapTilesObjs.cpp  MapTilesObjs.h  MesoDrop.cpp  MesoDrop.h  Mob.cpp  Mob.h  Npc.cpp  Npc.h  Obj.cpp  Obj.h  Portal.cpp  Portal.h  Reactor.cpp  Reactor.h  Tile.cpp  (+1 more)
Gameplay/Physics/: Foothold.cpp  Foothold.h  FootholdTree.cpp  FootholdTree.h  Physics.cpp  Physics.h  PhysicsObject.h
Graphics/: Animation.cpp  Animation.h  Color.cpp  Color.h  DrawArgument.h  EffectLayer.cpp  EffectLayer.h  Geometry.cpp  Geometry.h  GraphicsGL.cpp  GraphicsGL.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
IO/: Cursor.cpp  Cursor.h  KeyAction.h  KeyType.h  Keyboard.cpp  Keyboard.h  Messages.cpp  Messages.h  UI.cpp  UI.h  UIDragElement.h  UIElement.cpp  UIElement.h  UIState.h  UIStateGame.cpp  UIStateGame.h  UIStateLogin.cpp  UIStateLogin.h  Window.cpp  Window.h
IO/Components/: AreaButton.cpp  AreaButton.h  Button.cpp  Button.h  Charset.cpp  Charset.h  ChatBalloon.cpp  ChatBalloon.h  EquipTooltip.cpp  EquipTooltip.h  Gauge.cpp  Gauge.h  Icon.cpp  Icon.h  IconCover.cpp  IconCover.h  ItemTooltip.cpp  ItemTooltip.h  MapleButton.cpp  MapleButton.h  MapleFrame.cpp  MapleFrame.h  Nametag.cpp  Nametag.h  NpcText.cpp  ScrollingNotice.cpp  ScrollingNotice.h  SkillTooltip.cpp  SkillTooltip.h  Slider.cpp  Slider.h  SliderHoriz.cpp  SliderHoriz.h  Textfield.cpp  Textfield.h  Tooltip.h  TwoSpriteButton.cpp  TwoSpriteButton.h
IO/UITypes/: UIBuffList.cpp  UIBuffList.h  UIChangeChannel.cpp  UIChangeChannel.h  UICharCreation.cpp  UICharCreation.h  UICharSelect.cpp  UICharSelect.h  UIChatBar.cpp  UIChatBar.h  UIEquipInventory.cpp  UIEquipInventory.h  UIGameSettings.cpp  UIGameSettings.h  UIItemInventory.cpp  UIKeyConfig.h  (+30 more)
Net/: Cryptography.cpp  Cryptography.h  InPacket.cpp  InPacket.h  Login.h  NetConstants.h  OutPacket.cpp  OutPacket.h  PacketError.h  PacketHandler.h  PacketSwitch.cpp  PacketSwitch.h  Session.cpp  Session.h  SocketAsio.cpp  SocketAsio.h  SocketWinsock.cpp  SocketWinsock.h
Template/: BoolPair.h  Cache.h  EnumMap.h  Enumeration.h  Interpolated.h  Optional.h  Point.h  Range.h  Rectangle.h  Singleton.h  TimedQueue.h  TypeMap.h  nullable_ptr.h  stack_vec.h
Util/: HashUtility.cpp  HashUtility.h  Lerp.h  Misc.cpp  Misc.h  NxFiles.cpp  NxFiles.h  QuadTree.h  Randomizer.h  Str.h  TimedBool.h
gsl/: gsl-lite.hpp
(+38 files in other folders)
